--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
 						<ul>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 0.0%;"></div>
+									<div class="progress_bar" style="width: 100.0%;"></div>
 								</div>
 							</li>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 100.0%;"></div>
+									<div class="progress_bar" style="width: 66.66666666666666%;"></div>
 								</div>
 							</li>
 						</ul>
@@ -304,7 +304,7 @@
 						<ul>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 0.0%;"></div>
+									<div class="progress_bar" style="width: 14.523130946570383%;"></div>
 								</div>
 							</li>
 							<li>
@@ -335,6 +335,7 @@
 				<h4>cv / pages</h4>
 
 				<p style="width: 250px">
+					<a href="KusekNataliaCV.docx"><img src="website/icon/docx.png" alt="CV in Docx format"/></a>
 					<a href="KusekNataliaCV.adoc"><img src="website/icon/asciidoctor.png" alt="CV in Asciidoc format"/></a>
 					<a href=""><img src="website/icon/github.png" alt="GitHub page"/></a>
 					<a href="KusekNataliaCV.txt"><img src="website/icon/txt.png" alt="CV in TXT format"/></a>
