--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 						<div class="description grid_9">
 							<h3>GIS Technician</h3>
 							<h5>Cyient, Aylesbury, United Kingdom</h5>
-							<p><em>Industry: Telecommunication</em></p>
-							<p></p>
+							<p><em>Industry: Telecommunication</em><br /><em>Position type: contractor via agency</em></p>
+                            <p>Designing fibre network for BT.<br/></p>
                             <p><em>Technologies: </em>
                                 ArcGIS,
                                 Microsoft Excel,
@@ -124,8 +124,8 @@
 						<div class="description grid_9">
 							<h3>GIS Technician Intern</h3>
 							<h5>GISON, Krakow, Poland</h5>
-							<p><em>Industry: </em></p>
-							<p></p>
+							<p><em>Industry: </em><br /><em>Position type: permanent</em></p>
+                            <p>Creating metadata, digitalizing map data.<br/></p>
                             <p><em>Technologies: </em>
                                 QGIS,
                             </p>
@@ -149,8 +149,8 @@
 						<div class="description grid_9">
 							<h3>Land Surveyor Assistant</h3>
 							<h5>GEOMAP, Krakow, Poland</h5>
-							<p><em>Industry: Land surveying</em></p>
-							<p></p>
+							<p><em>Industry: Land surveying</em><br /><em>Position type: part-time</em></p>
+                            <p>Real estate divisions, resumptions of border, maps updates.<br/></p>
                             <p><em>Technologies: </em>
                                 Microsoft Word,
                                 WinKalk,
@@ -177,8 +177,8 @@
 						<div class="description grid_9">
 							<h3>Land Surveyor Assistant</h3>
 							<h5>GEOPROF, Krakow, Poland</h5>
-							<p><em>Industry: Land surveying</em></p>
-							<p></p>
+							<p><em>Industry: Land surveying</em><br /><em>Position type: permanent</em></p>
+                            <p>Maps updates.<br/></p>
                             <p><em>Technologies: </em>
                                 Microstation,
                             </p>
@@ -213,9 +213,15 @@
 			<!-- start of profile info (sidebar) -->			
 			<div id="profile" class="sidebarPanel">
 				<h4>profile</h4>
-				<p></p>
+				<p>Master of Science in Geodesy, Surveying and Cartography with 10 months experience in GIS and 3 years in land surveying.</p>
 			</div>
 			<!-- // end of profile info (sidebar) -->
+            <!-- start of availability info (sidebar) -->
+            <div id="availability" class="sidebarPanel">
+                <h4>availability</h4>
+                <p>2 weeks</p>
+            </div>
+            <!-- // end of availability info (sidebar) -->
 			<!-- start of skills info (sidebar) -->
 			<div id="skills" class="sidebarPanel">
 				<h4>skills</h4>
@@ -232,7 +238,7 @@
 						<ul>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 0.7002209877829825%;"></div>
+									<div class="progress_bar" style="width: 0.5753409962487716%;"></div>
 								</div>
 							</li>
 						</ul>
@@ -251,12 +257,12 @@
 						<ul>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 10.892348209927787%;"></div>
+									<div class="progress_bar" style="width: 75.0%;"></div>
 								</div>
 							</li>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 7.2615654732851915%;"></div>
+									<div class="progress_bar" style="width: 5.966511125228399%;"></div>
 								</div>
 							</li>
 						</ul>
@@ -276,17 +282,17 @@
 						<ul>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 100.0%;"></div>
+									<div class="progress_bar" style="width: 82.16563146306109%;"></div>
 								</div>
 							</li>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 100.0%;"></div>
+									<div class="progress_bar" style="width: 82.16563146306109%;"></div>
 								</div>
 							</li>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 100.0%;"></div>
+									<div class="progress_bar" style="width: 82.16563146306109%;"></div>
 								</div>
 							</li>
 						</ul>
@@ -305,12 +311,12 @@
 						<ul>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 14.523130946570383%;"></div>
+									<div class="progress_bar" style="width: 100.0%;"></div>
 								</div>
 							</li>
 							<li>
 								<div class="progress_container">
-									<div class="progress_bar" style="width: 100.0%;"></div>
+									<div class="progress_bar" style="width: 82.16563146306109%;"></div>
 								</div>
 							</li>
 						</ul>
@@ -322,8 +328,8 @@
                 <div id="legend">
                     <p>Bars are calculated using:</p>
                     <p lang="latex">factor * \sum_{i = end}^{start} 2^{-\frac{i}{12}}</p>
-                    <p>where <em>factor</em> - depends on usage frequency (1 - day-to-day, 0.75 - often, 0.5 -
-                        occasionally),
+                    <p>where
+                        <em>factor</em> - depends on usage frequency (1 - day-to-day, 0.75 - often, 0.5 - occasionally),
                         <em>start</em> - months since first usage
                         <em>end</em> - months since last usage
                     </p>
@@ -363,6 +369,12 @@
 
             </div>
             <!-- // end of recommendations info (sidebar) -->
+            <!-- start of last updated info (sidebar) -->
+            <div id="last-updated" class="sidebarPanel">
+                <h4>last updated</h4>
+                <p>14/06/16</p>
+            </div>
+            <!-- // end of last-updated info (sidebar) -->
 		</div>
 		
 	</div>	
