--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<div class="description grid_9">
 							<h3>GIS Technician Intern</h3>
 							<h5>GISON, Krakow, Poland</h5>
-							<p><em>Industry: </em><br /><em>Position type: permanent</em></p>
+							<p><em>Industry: GIS systems provider</em><br /><em>Position type: permanent</em></p>
                             <p>Creating metadata, digitalizing map data.<br/></p>
                             <p><em>Technologies: </em>
                                 QGIS,
@@ -357,7 +357,7 @@
 					<a href=""><img src="website/icon/github.png" alt="GitHub page"/></a>
 					<a href="KusekNataliaCV.txt"><img src="website/icon/txt.png" alt="CV in TXT format"/></a>
 					<a href="KusekNataliaCV.md"><img src="website/icon/markdown.png" alt="CV in Markdown format"/></a>
-					<a href=""><img src="website/icon/linkedin.png" alt="LinkedIn page"/></a>
+					<a href="https://uk.linkedin.com/in/nataliakusek/en"><img src="website/icon/linkedin.png" alt="LinkedIn page"/></a>
 					<a href="KusekNataliaCV.pdf"><img src="website/icon/pdf.png" alt="CV in PDF format"/></a>
 					<a href="KusekNataliaCV.json"><img src="website/icon/json.png" alt="CV in JSON format"/></a>
 				</p>
