--- a/index.html
+++ b/index.html
@@ -337,16 +337,26 @@
 			</div>
 			<!-- // end of skills info (sidebar) -->
 			<!-- start of education info (sidebar) -->
-			<div id="education" class="sidebarPanel" style="padding-top: 20px">
+			<div id="education" class="sidebarPanel">
 				<h4>education</h4>
 
                     2006 - 2011<br>
 				<p>
-                    Agricultural Land Surveying and Property Appraisal<br>
+                    Agricultural Land Surveying and Property Appraisal<br/>
 					<em>University of Agriculture in Krakow</em><br>
 				</p>
 			</div>
 			<!-- // end of education info (sidebar) -->
+            <!-- start of trainings info (sidebar) -->
+            <div id="trainings" class="sidebarPanel">
+                <h4>trainings / conferences</h4>
+
+                <p>
+                     Programming for Everybody (Getting Started with Python) (2015)<br/>
+                     Python Data Structures (2015)<br/>
+                </p>
+            </div>
+            <!-- // end of trainings info (sidebar) -->
 			<!-- start of cv info (sidebar) -->
 			<div id="cv" class="sidebarPanel">
 				<h4>cv / pages</h4>
