--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" hv="a0" style="">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Natalia Kusek - Land Surveyor/GIS Technician</title>
+	<title>Natalia Kusek - CAD/GIS Technician</title>
 	
 	<!-- Styles Are set here -->
     <link href="./website/reset.css" rel="stylesheet" type="text/css">
@@ -51,7 +51,7 @@
 				<!-- end of years nav -->
 				<!-- Hire Me text goes here -->
 				<div class="grid_11" id="topBarRight">
-					<h2>Land Surveyor/GIS <em>Technician</em></h2>
+					<h2>CAD/GIS <em>Technician</em></h2>
 				</div>
 				<!-- end of hire me text div-->
 			</div>
