--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 			<!-- start of profile info (sidebar) -->			
 			<div id="profile" class="sidebarPanel">
 				<h4>profile</h4>
-				<p>Cambridge Spark Data Science bootcamp graduate with Python and Machine Learning knowledge. Master of Science with 1 year experience in GIS and 2 years in land surveying and CAD.</p>
+				<p>Cambridge Spark Data Science bootcamp graduate with Python and Machine Learning knowledge. Bachelor of Science with 1 year experience in GIS and 2 years in land surveying and CAD.</p>
 			</div>
 			<!-- // end of profile info (sidebar) -->
 			<!-- start of cv info (sidebar) -->
